--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "boxy-demo-1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma-generate": "prisma generate --schema prisma-schema/schema.prisma",
     "prisma-migrate-dev": "prisma migrate dev --schema prisma-schema/schema.prisma",
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
