--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.8.1",
+    "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
